# mcp-servers

./: .gitignore  LICENSE  README.md
google-sheets/: README.md  pyproject.toml  run-server.sh  server.py
google_sheets_mcp/: .gitignore  LICENSE  README.md  check_mcp.py  design_document.md  requirements.txt  setup.py  test_firecrawl.py  test_sheets.py
google_sheets_mcp/examples/: ai_assistant_example.md  basic_usage.py  mcp_settings_example.json
google_sheets_mcp/src/: auth.py  server.py
google_sheets_mcp/src/sheets/: charts.py  core.py  data_ops.py  formatting.py  formulas.py
google_sheets_mcp/src/utils/: converters.py  validators.py
google_sheets_mcp/tests/: test_server.py  test_utils.py
mcp-template/: README.md  pyproject.toml
